# hs-formation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ci/: release.sh
docs/: README.md
docs/examples/: posting.md  production.md  scraping.md
docs/formation/: attrs.md  for-requests.md
docs/middleware/: accept.md  breaker.md  context.md  context_logger.md  duration.md  logger.md  request_id.md  retry.md  timeout.md  ua.md
examples/: aio_breaker.py  async_github.py  async_httpbin.py  breaker.py  extensibility.py  github.py  google.py  httpbin.py  session.py  vanilla.py
hs_formation/: __version__.py  for_aio_http.py  for_requests.py  formation.py
hs_formation/middleware/: __init__.py  accept.py  breaker.py  context.py  context_logger.py  iobreaker.py  logger.py  request_duration.py  request_id.py  retry.py  timeout.py  ua.py
hs_formation/utils/: attrs_serde.py
tests/: test_aio_http_client.py  test_async_breaker.py  test_async_retry.py  test_breaker.py  test_client.py  test_context.py  test_for_aio_http.py  test_for_requests.py  test_formation.py  test_request_logger.py  test_retry.py  utils.py
tests/cassettes/: test_async_accept.yaml  test_async_cookies.yaml  test_async_for_requests.yaml  test_async_for_requests_with_params.yaml  test_async_html_response.yaml  test_async_json_all.yaml  test_async_json_response.yaml  test_async_raw_response.yaml  test_async_retry.yaml  test_async_retry_fails.yaml  test_async_text_response.yaml  test_async_ua.yaml  test_async_xmldict_response.yaml  test_namespace.yaml
tests/snapshots/: snap_test_aio_http_client.py  snap_test_async_breaker.py  snap_test_async_retry.py  snap_test_breaker.py  snap_test_client.py  snap_test_for_aio_http.py  snap_test_request_logger.py  snap_test_retry.py
